p2-parsing-javacc/VNM.java
/* VNM.java */
/* Generated By:JavaCC: Do not edit this line. VNM.java */
public class VNM implements VNMConstants {

// Special tokens are saved, but not sent to the parser
// Hint: Perhaps comments should go here...?
// Remove the comments below when you're ready
//SPECIAL_TOKEN : 
//{

//}
  static final public 
void start() throws ParseException, ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:
    case LRND:
    case LSQU:
    case WHILE:
    case FOR:
    case IF:
    case FUNCTION:
    case RETURN:
    case PRINT:
    case PRINTLN:
    case VAR:
    case NUMBER:
    case IDNUM:
    case IDBOOL:
    case IDVEC:{
      statement();
      jj_consume_token(SCOL);
      break;
      }
    case 0:{
      jj_consume_token(0);
{if (true) throw new ParseException("End of File.");}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void statement() throws ParseException {
    if (jj_2_1(2)) {
      assign_stat();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAR:{
        var_decl();
        break;
        }
      case FUNCTION:{
        fn_decl();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        if (jj_2_2(2)) {
          exp_start();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case RETURN:{
            return_stat();
            break;
            }
          case PRINT:{
            print_stat();
            break;
            }
          case PRINTLN:{
            println_stat();
            break;
            }
          case IF:{
            if_stat();
            break;
            }
          case FOR:{
            for_stat();
            break;
            }
          case WHILE:{
            while_stat();
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
}

  static final public void exp_start() throws ParseException {
    expression();
}

  static final public void body() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case LRND:
      case LSQU:
      case WHILE:
      case FOR:
      case IF:
      case FUNCTION:
      case RETURN:
      case PRINT:
      case PRINTLN:
      case VAR:
      case NUMBER:
      case IDNUM:
      case IDBOOL:
      case IDVEC:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      statement();
      jj_consume_token(SCOL);
    }
}

  static final public void clause() throws ParseException {
    statement();
    jj_consume_token(SCOL);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case LRND:
      case LSQU:
      case WHILE:
      case FOR:
      case IF:
      case FUNCTION:
      case RETURN:
      case PRINT:
      case PRINTLN:
      case VAR:
      case NUMBER:
      case IDNUM:
      case IDBOOL:
      case IDVEC:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      statement();
      jj_consume_token(SCOL);
    }
}

  static final public void var_decl() throws ParseException {
    jj_consume_token(VAR);
    ident_list();
}

  static final public void fn_decl() throws ParseException {
    jj_consume_token(FUNCTION);
    identifier();
    jj_consume_token(LRND);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDNUM:
    case IDBOOL:
    case IDVEC:{
      ident_list();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RRND);
    body();
    jj_consume_token(END);
}

  static final public void ident_list() throws ParseException {
    identifier();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      identifier();
    }
}

  static final public void fn_call() throws ParseException {
    identifier();
    jj_consume_token(LRND);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:
    case LRND:
    case LSQU:
    case NUMBER:
    case IDNUM:
    case IDBOOL:
    case IDVEC:{
      exp_list();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(RRND);
}

  static final public void exp_list() throws ParseException {
    expression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      expression();
    }
}

  static final public void return_stat() throws ParseException {
    jj_consume_token(RETURN);
    if (jj_2_3(2)) {
      expression();
    } else if (jj_2_4(2)) {
      condition();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void print_stat() throws ParseException {
    jj_consume_token(PRINT);
    print_list();
}

  static final public void println_stat() throws ParseException {
    jj_consume_token(PRINTLN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:
    case LRND:
    case LSQU:
    case NUMBER:
    case IDNUM:
    case IDBOOL:
    case IDVEC:
    case STRING:{
      print_list();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
}

  static final public void print_list() throws ParseException {
    print_component();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      print_component();
    }
}

  static final public void print_component() throws ParseException {
    if (jj_2_5(2)) {
      expression();
    } else if (jj_2_6(2)) {
      jj_consume_token(STRING);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDBOOL:{
        jj_consume_token(IDBOOL);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void assign_stat() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDNUM:{
      jj_consume_token(IDNUM);
      jj_consume_token(ASSGN);
      expression();
      break;
      }
    case IDBOOL:{
      jj_consume_token(IDBOOL);
      jj_consume_token(ASSGN);
      condition();
      break;
      }
    case IDVEC:{
      jj_consume_token(IDVEC);
      jj_consume_token(ASSGN);
      vec_const();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void if_stat() throws ParseException {
    jj_consume_token(IF);
    condition();
    jj_consume_token(THEN);
    clause();
    elifs();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      clause();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(FI);
}

  static final public void elifs() throws ParseException {
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELIF:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_6;
      }
      jj_consume_token(ELIF);
      condition();
      jj_consume_token(THEN);
      clause();
    }
}

  static final public void for_stat() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(IDNUM);
    jj_consume_token(IN);
    exp_list();
    jj_consume_token(DO);
    body();
    jj_consume_token(END);
}

  static final public void while_stat() throws ParseException {
    jj_consume_token(WHILE);
    condition();
    jj_consume_token(DO);
    body();
    jj_consume_token(END);
}

  static final public void condition() throws ParseException {
    or_clause();
}

  static final public void or_clause() throws ParseException {
    and_clause();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_7;
      }
      jj_consume_token(OR);
      and_clause();
    }
}

  static final public void and_clause() throws ParseException {
    not_clause();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_8;
      }
      jj_consume_token(AND);
      not_clause();
    }
}

  static final public void not_clause() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      jj_consume_token(NOT);
      not_clause();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      if (jj_2_7(2)) {
        jj_consume_token(LRND);
        condition();
        jj_consume_token(RRND);
      } else if (jj_2_8(2)) {
        fn_call();
      } else if (jj_2_9(2)) {
        comparison();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TRUE:
        case FALSE:
        case IDBOOL:{
          boolean_character();
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
}

  static final public void comparison() throws ParseException {
    expression();
    comparator();
    expression();
}

  static final public void expression() throws ParseException {
    summation();
}

  static final public void summation() throws ParseException {
    product();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      product();
    }
}

  static final public void product() throws ParseException {
    suffix_term();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PROD:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PROD:{
        jj_consume_token(PROD);
        break;
        }
      case DIV:{
        jj_consume_token(DIV);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      suffix_term();
    }
}

  static final public void suffix_term() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      suffix_term();
      break;
      }
    case LRND:
    case LSQU:
    case NUMBER:
    case IDNUM:
    case IDBOOL:
    case IDVEC:{
      term();
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void term() throws ParseException {
    if (jj_2_10(2)) {
      jj_consume_token(LRND);
      expression();
      jj_consume_token(RRND);
    } else if (jj_2_11(2)) {
      fn_call();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LSQU:
      case NUMBER:
      case IDNUM:
      case IDVEC:{
        simple_term();
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void simple_term() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDNUM:{
      jj_consume_token(IDNUM);
      break;
      }
    case IDVEC:{
      jj_consume_token(IDVEC);
      break;
      }
    case NUMBER:{
      jj_consume_token(NUMBER);
      break;
      }
    case LSQU:{
      vec_const();
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void vec_const() throws ParseException {
    jj_consume_token(LSQU);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:
    case LRND:
    case LSQU:
    case NUMBER:
    case IDNUM:
    case IDBOOL:
    case IDVEC:{
      exp_list();
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      ;
    }
    jj_consume_token(RSQU);
}

  static final public void comparator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LESS:{
      jj_consume_token(LESS);
      break;
      }
    case LE:{
      jj_consume_token(LE);
      break;
      }
    case GREAT:{
      jj_consume_token(GREAT);
      break;
      }
    case GE:{
      jj_consume_token(GE);
      break;
      }
    case EQ:{
      jj_consume_token(EQ);
      break;
      }
    case NEQ:{
      jj_consume_token(NEQ);
      break;
      }
    case IN:{
      jj_consume_token(IN);
      break;
      }
    case NOTIN:{
      jj_consume_token(NOTIN);
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void identifier() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDNUM:{
      jj_consume_token(IDNUM);
      break;
      }
    case IDBOOL:{
      jj_consume_token(IDBOOL);
      break;
      }
    case IDVEC:{
      jj_consume_token(IDVEC);
      break;
      }
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void boolean_character() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDBOOL:{
      jj_consume_token(IDBOOL);
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
      break;
      }
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_3R_vec_const_280_3_41()
 {
    if (jj_scan_token(LSQU)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_vec_const_280_11_42()) jj_scanpos = xsp;
    if (jj_scan_token(RSQU)) return true;
    return false;
  }

  static private boolean jj_3R_product_264_18_29()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(16)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) return true;
    }
    return false;
  }

  static private boolean jj_3R_exp_list_182_3_43()
 {
    if (jj_3R_expression_256_3_13()) return true;
    return false;
  }

  static private boolean jj_3R_simple_term_276_3_39()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(49)) {
    jj_scanpos = xsp;
    if (jj_scan_token(51)) {
    jj_scanpos = xsp;
    if (jj_scan_token(48)) {
    jj_scanpos = xsp;
    if (jj_3R_simple_term_276_34_40()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_fn_call_178_3_15()
 {
    if (jj_3R_identifier_297_3_22()) return true;
    if (jj_scan_token(LRND)) return true;
    return false;
  }

  static private boolean jj_3R_term_272_3_36()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3R_term_272_70_38()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3_10()
 {
    if (jj_scan_token(LRND)) return true;
    if (jj_3R_expression_256_3_13()) return true;
    return false;
  }

  static private boolean jj_3R_summation_260_14_25()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(14)) {
    jj_scanpos = xsp;
    if (jj_scan_token(15)) return true;
    }
    return false;
  }

  static private boolean jj_3R_suffix_term_268_3_28()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_suffix_term_268_3_32()) {
    jj_scanpos = xsp;
    if (jj_3R_suffix_term_268_38_33()) return true;
    }
    return false;
  }

  static private boolean jj_3R_suffix_term_268_3_32()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(14)) {
    jj_scanpos = xsp;
    if (jj_scan_token(15)) return true;
    }
    if (jj_3R_suffix_term_268_3_28()) return true;
    return false;
  }

  static private boolean jj_3R_product_264_3_24()
 {
    if (jj_3R_suffix_term_268_3_28()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_product_264_18_29()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_summation_260_3_20()
 {
    if (jj_3R_product_264_3_24()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_summation_260_14_25()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_expression_256_3_13()
 {
    if (jj_3R_summation_260_3_20()) return true;
    return false;
  }

  static private boolean jj_3R_comparison_252_3_16()
 {
    if (jj_3R_expression_256_3_13()) return true;
    if (jj_3R_comparator_285_5_23()) return true;
    return false;
  }

  static private boolean jj_3R_and_clause_238_17_31()
 {
    if (jj_scan_token(AND)) return true;
    return false;
  }

  static private boolean jj_3R_not_clause_247_5_35()
 {
    if (jj_3R_boolean_character_301_3_37()) return true;
    return false;
  }

  static private boolean jj_3R_exp_start_154_3_12()
 {
    if (jj_3R_expression_256_3_13()) return true;
    return false;
  }

  static private boolean jj_3_9()
 {
    if (jj_3R_comparison_252_3_16()) return true;
    return false;
  }

  static private boolean jj_3R_or_clause_234_17_27()
 {
    if (jj_scan_token(OR)) return true;
    return false;
  }

  static private boolean jj_3_8()
 {
    if (jj_3R_fn_call_178_3_15()) return true;
    return false;
  }

  static private boolean jj_3_7()
 {
    if (jj_scan_token(LRND)) return true;
    if (jj_3R_condition_230_3_14()) return true;
    return false;
  }

  static private boolean jj_3R_not_clause_243_5_30()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_not_clause_243_5_34()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3R_not_clause_247_5_35()) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_not_clause_243_5_34()
 {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_not_clause_243_5_30()) return true;
    return false;
  }

  static private boolean jj_3R_term_272_70_38()
 {
    if (jj_3R_simple_term_276_3_39()) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_exp_start_154_3_12()) return true;
    return false;
  }

  static private boolean jj_3R_and_clause_238_3_26()
 {
    if (jj_3R_not_clause_243_5_30()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_and_clause_238_17_31()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_assign_stat_207_5_11()) return true;
    return false;
  }

  static private boolean jj_3R_or_clause_234_3_21()
 {
    if (jj_3R_and_clause_238_3_26()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_or_clause_234_17_27()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_condition_230_3_14()
 {
    if (jj_3R_or_clause_234_3_21()) return true;
    return false;
  }

  static private boolean jj_3_6()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  static private boolean jj_3_4()
 {
    if (jj_3R_condition_230_3_14()) return true;
    return false;
  }

  static private boolean jj_3_11()
 {
    if (jj_3R_fn_call_178_3_15()) return true;
    return false;
  }

  static private boolean jj_3R_simple_term_276_34_40()
 {
    if (jj_3R_vec_const_280_3_41()) return true;
    return false;
  }

  static private boolean jj_3R_assign_stat_209_5_19()
 {
    if (jj_scan_token(IDVEC)) return true;
    if (jj_scan_token(ASSGN)) return true;
    return false;
  }

  static private boolean jj_3R_assign_stat_208_5_18()
 {
    if (jj_scan_token(IDBOOL)) return true;
    if (jj_scan_token(ASSGN)) return true;
    return false;
  }

  static private boolean jj_3R_assign_stat_207_5_11()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_assign_stat_207_5_17()) {
    jj_scanpos = xsp;
    if (jj_3R_assign_stat_208_5_18()) {
    jj_scanpos = xsp;
    if (jj_3R_assign_stat_209_5_19()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_assign_stat_207_5_17()
 {
    if (jj_scan_token(IDNUM)) return true;
    if (jj_scan_token(ASSGN)) return true;
    return false;
  }

  static private boolean jj_3R_suffix_term_268_38_33()
 {
    if (jj_3R_term_272_3_36()) return true;
    return false;
  }

  static private boolean jj_3R_boolean_character_301_3_37()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(50)) {
    jj_scanpos = xsp;
    if (jj_scan_token(28)) {
    jj_scanpos = xsp;
    if (jj_scan_token(29)) return true;
    }
    }
    return false;
  }

  static private boolean jj_3_5()
 {
    if (jj_3R_expression_256_3_13()) return true;
    return false;
  }

  static private boolean jj_3R_identifier_297_3_22()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(49)) {
    jj_scanpos = xsp;
    if (jj_scan_token(50)) {
    jj_scanpos = xsp;
    if (jj_scan_token(51)) return true;
    }
    }
    return false;
  }

  static private boolean jj_3_3()
 {
    if (jj_3R_expression_256_3_13()) return true;
    return false;
  }

  static private boolean jj_3R_vec_const_280_11_42()
 {
    if (jj_3R_exp_list_182_3_43()) return true;
    return false;
  }
